# CoD4x_Server

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakeRequirements.txt  COPYRIGHT.md  Copyright.md  Dockerfile  README.md  README.txt  appveyor.yml  build_elf.sh  build_linux.sh  build_mach-o.sh  build_updateable_elf.sh  build_updateable_win32_PE.cmd  build_win32.cmd  build_win32_PE.cmd  changelog.txt  configure.cmd  configure_mingw.cmd  configure_msvc_not_working.cmd  configure_win32_mingw.cmd  configure_win32_msvc.cmd  copying.md  docker-compose.yml  globalconfig.cfg  lib.makefile  linkerscript.ld  linkerscript_win32.ld  makefile  makefile-old  makefile.linux32  makefile.win32  makefile2  makefile3  makefile_common  run.sh  (+1 more)
dis/: array.txt  botnames.txt  cvar_flagchanger.c  hashgen.c  md5.c  other.c  plugin_handler.c  plugin_handler.h  tcprcon.txt
docs/: ADDSCRIPTCOMMAND_EXAMPLE.md  HL2_RCON_INTERFACE.md  MULTIPLE_SERVERS_TUTORIAL.md
lib/: dummy  libs.txt
pbsv_exec/: makedll32  pbsv.c
plugins/: build_plugins.cmd  callback_declarations.h  declarations.h  function_declarations.h  pinc.h  plugin_declarations.h  sv_banlist.c
scriptdocumentation/: MULTIPLE_SERVERS_TUTORIAL.md  (+7 more)
src/: CMakeLists.txt  DynEntity_load_obj.cpp  DynEntity_load_obj.hpp  aabbtree.cpp  aabbtree.hpp  allhooks.c  allhooks.h  assert.c  assert.cpp  bg.hpp  bg_animation.cpp  bg_animation.hpp  bg_jump.cpp  bg_jump.hpp  bg_local.h  bg_local.hpp  bg_mantle.cpp  bg_mantle.hpp  bg_misc.cpp  bg_misc.hpp  bg_perks_mp.cpp  bg_perks_mp.hpp  bg_pmove.cpp  bg_pmove.hpp  bg_public.h  bg_public.hpp  bg_weapons.cpp  bg_weapons.hpp  bg_weapons_load_obj.cpp  bg_weapons_load_obj.hpp  build_cm.cmd  bullet.cpp  calls.txt  cl_dedicated.cpp  cl_dedicated.hpp  client_dedicated.h  client_dedicated.hpp  cm_debug.c  cm_debug.cpp  cm_load.c  (+494 more)
src/asmsource/: CMakeLists.txt  _DynEntity_load_obj.asm  _aabbtree.asm  _bg_animation_mp.asm  _bg_jump.asm  _bg_mantle.asm  _bg_misc.asm  _bg_pmove.asm  _bg_slidemove.asm  _bg_vehicles_mp.asm  _bg_weapons.asm  _bg_weapons_load_obj.asm  _brush_edges.asm  _bullet.asm  _cm_load.asm  _cm_load_obj.asm  _cm_mesh.asm  _cm_staticmodel.asm  _cm_staticmodel_load_obj.asm  _cm_trace.asm  _cm_tracebox.asm  _cm_world.asm  _collision_kernel.asm  _collision_space.asm  _collision_std.asm  _collision_transform.asm  _collision_trimesh_box.asm  _collision_util.asm  _com_bsp.asm  _com_bsp_load_obj.asm  _com_constantconfigstrings.asm  _com_loadutils.asm  _com_math.asm  _com_memory.asm  _com_stringtable.asm  _con_channels.asm  _db_assetnames.asm  _db_auth.asm  _db_load.asm  _db_memory.asm  (+94 more)
src/botlib/: be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_def.h  be_aas_entity.c  be_aas_file.c  be_aas_main.c  be_aas_move.c  be_aas_optimize.c  be_aas_reach.c  be_aas_route.c  be_aas_routealt.c  be_aas_routetable.c  be_aas_sample.c  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_interface.c  comp.cmd  comp.sh  game_inc.h  l_crc.c  l_libvar.c  l_log.c  l_memory.c  l_precomp.c  l_precomp.h  l_script.c  l_struct.c  l_utils.h
src/bspc/: aas_create.c  aas_store.c  aas_store.h  be_aas_bspc.c  brushbsp.c  bspc.c  build_win32_PE.cmd  cm_patch.c  cm_patch.h  db_load.h  db_loaddummy.cpp  db_miniload.cpp  db_miniregistry.cpp  l_assert.c  l_bsp_iw3.c  l_bsp_iw3.h  l_bsp_q3.c  l_cm.c  l_cmd.c  l_cmd.h  l_math.h  l_mem.c  l_mem.h  l_qfiles.c  l_qfiles.h  l_threads.c  map.c  map_iw3.c  map_q3.c  mp_backlot.lin  mp_rats_sansa_room.aas  mp_shipment.lin  portals.c  q3files.h  qbsp.h
src/bspc/asmsource/: _com_memory.asm  _db_load.asm  _db_memory.asm  _db_registry.asm  _db_stringtable_load.asm
src/futureusecode/: cm_local.hpp  cm_mesh.cpp  cm_trace.cpp  cm_tracebox.cpp  mss.h
src/game/: botlib.h  def.h  surfaceflags.h
src/guid2playeridconverter/: build.sh  compiledll-release.cmd  guid2playerid.h  main.c
src/mbedtls/: CMakeLists.txt  Makefile  build.cmd  config.h  debug.h  makefile  ssl_tls.c
src/off/: xac_helper.h
src/tmp_mathlibackup/: _com_math.asm  _com_math_anglevectors.asm  q_math.c  q_math.c.old
src/tomcrypt/: CMakeLists.txt  compile_linux.sh  compile_win32.cmd  makefile  tomcrypt.h  tomcrypt_cfg.h
src/tomcrypt/hashes/: sha1.c
src/tomcrypt/misc/base64/: base64_decode.c  base64_encode.c
src/tomcrypt/pk/asn1/der/sequence/: der_length_sequence.c
src/tomcrypt/pk/pkcs1/: pkcs_1_mgf1.c  pkcs_1_oaep_encode.c  pkcs_1_os2ip.c  pkcs_1_pss_decode.c  pkcs_1_pss_encode.c  pkcs_1_v1_5_decode.c
src/tomcrypt/pk/rsa/: rsa_encrypt_key.c  rsa_exptmod.c  rsa_free.c  rsa_import.c  rsa_verify_hash.c
src/unix/: CMakeLists.txt  certificates.c  elf32_parser.c  elf32_parser.cpp  sys_bsd.c  sys_bsd.cpp  sys_cod4linker_linux.c  sys_cod4linker_mach.c  sys_cod4linker_mach.cc  sys_con_tty.c  sys_con_tty.cpp  sys_linux.c  sys_linux.cpp  sys_linux.hpp  sys_mach.cc  sys_unix.c  sys_unix.cpp  sys_unix.h  sys_unix.hpp
src/version/: CMakeLists.txt  makefile  version.c  version.cpp  version.h  version_build.h  version_make_progress  version_make_progress.cmd  version_make_progress.sh
src/win32/: CMakeLists.txt  makefile  makefile_debug  makefile_release  pe32_parser.c  pe32_parser.cpp  stdlib_wrap.cpp  stdlib_wrap.hpp  sys_cod4linker_win32.c  sys_win32.c  sys_win32.cpp  sys_win32.h  sys_win32.hpp  unix_wrap.cpp  unix_wrap.hpp  win_cod4.rc  win_cod4.res  win_syscon.c  win_syscon.cpp  winapi_wrap.c  winapi_wrap.cpp
src/xassets/: CMakeLists.txt  extractor.c  extractor.cpp  extractor.hpp  font.h  font.hpp  fx.h  fx.hpp  gfximage.h  gfximage.hpp  gfxworld.h  gfxworld.hpp  keyword.c  keyword.cpp  keyword.h  keyword.hpp  localized.h  mapents.h  material.h  material.hpp  menu.c  menu.cpp  menu.h  menu.hpp  menufile.h  menulist.h  menulist.hpp  phys.h  phys.hpp  rawfile.h  sounds.h  sounds.hpp  stringtable.h  stringtable.hpp  weapondef.h  weapondef.hpp  xanims.hpp  xmodel.h  xmodel.hpp
src/zlib/: CMakeLists.txt  cod4x_utils.c  crc32.h  deflate.c  makefile_debug  makefile_release  trees.c  unzip.c  unzip.h  zconf.h  zutil.h
(+1260 files in other folders)
