set(LIBRARY_NAME version)

file(GLOB_RECURSE CPP_SRC *.c *.cpp)
file(GLOB_RECURSE CPP_INC *.h *.hpp)

find_program(GIT git)
execute_process(COMMAND ${GIT} rev-list --count HEAD OUTPUT_VARIABLE BUILD_NUMBER OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND ${GIT} rev-parse --abbrev-ref HEAD OUTPUT_VARIABLE BUILD_BRANCH OUTPUT_STRIP_TRAILING_WHITESPACE)
execute_process(COMMAND ${GIT} rev-parse HEAD OUTPUT_VARIABLE BUILD_REVISION OUTPUT_STRIP_TRAILING_WHITESPACE)

if ("${BUILD_NUMBER}" STREQUAL "")
    set(BUILD_NUMBER 0)
endif()

if ("${BUILD_BRANCH}" STREQUAL "")
    set(BUILD_BRANCH no-branch)
endif()

if ("${BUILD_REVISION}" STREQUAL "")
    set(BUILD_REVISION no-revision)
endif()

message(STATUS "Detected build number: ${BUILD_NUMBER}")
message(STATUS "Detected build branch: ${BUILD_BRANCH}")
message(STATUS "Detected build revision: ${BUILD_REVISION}")

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBUILD_NUMBER=${BUILD_NUMBER} -DBUILD_BRANCH=${BUILD_BRANCH} -DBUILD_REVISION=${BUILD_REVISION}")
#message("CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS}")
add_definitions(-DBUILD_NUMBER=${BUILD_NUMBER} -DBUILD_BRANCH=${BUILD_BRANCH} -DBUILD_REVISION=${BUILD_REVISION})

add_library(${LIBRARY_NAME} STATIC ${CPP_SRC} ${CPP_INC})
